--- a/CreditCardFraudDetection.ipynb
+++ b/CreditCardFraudDetection.ipynb
@@ -14,7 +14,7 @@
       "metadata": {},
       "source": [
         "## Table des Matières\n",
-        "1. [Données](#Données)\n",
+        "1. [Chargement des Bibliothèques et des Données](#chargement-des-bibliothèques-et-des-données)\n",
         "2. [Exploration des Données](#Exploration-des-Données)\n",
         "3. [Préparation des Données](#Préparation-des-Données)\n",
         "4. [Construction et Évaluation du Modèle](#Construction-et-Évaluation-du-Modèle)\n",
@@ -26,7 +26,7 @@
       "metadata": {},
       "source": [
         "## Données\n",
-        "Les données utilisées proviennent d'un jeu de données public contenant des transactions par carte de crédit réalisées par des titulaires de carte européens en septembre 2013. Le jeu de données comprend des transactions effectuées en deux jours, avec 492 fraudes sur 284,807 transactions.\n"
+        "\n"
       ]
     },
     {
@@ -46,7 +46,14 @@
       "metadata": {},
       "source": [
         "### Chargement des Bibliothèques et des Données\n",
-        "Importation des bibliothèques nécessaires et chargement des données."
+        "Les données utilisées proviennent d'un jeu de données public contenant des transactions par carte de crédit réalisées par des titulaires de carte européens en septembre 2013. Le jeu de données comprend des transactions effectuées en deux jours, avec 492 fraudes sur 284,807 transactions."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Importation des bibliothèques nécessaires et chargement des données.\n"
       ]
     },
     {
@@ -455,6 +462,13 @@
       "source": [
         "data=pd.read_csv('creditcard.csv')\n",
         "data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exploration des Données"
       ]
     },
     {
@@ -2449,6 +2463,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Construction et Évaluation du Modèle"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
@@ -3336,17 +3357,6 @@
         "    print(\"Fraudulent Transaction Detected.\")\n",
         "else:\n",
         "    print(\"Non-Fraudulent Transaction.\")\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "## Conclusion\n",
-        "\n",
-        "Nous avons construit un modèle de classification pour détecter les transactions frauduleuses avec une précision satisfaisante. Cependant, il est possible d'améliorer les performances en testant d'autres modèles, en optimisant les hyperparamètres, et en utilisant des techniques de balance des classes pour mieux gérer le déséquilibre des données.\n",
-        "\n",
-        "Merci de votre attention."
       ]
     }
   ],
